no really, fix overflow!

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -31,6 +31,6 @@ body {
 .c-content {
     color: white;
 }
-.gatsby-focus-wrapper {
+#gatsby-focus-wrapper {
     overflow: hidden;
 }
